Unlock for online editing by platform admin
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1088 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/multilang/attachment.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/multilang/attachment.properties
@@ -21,31 +21,31 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-suppressionConfirmation = Etes-vous sûr de vouloir supprimer le fichier joint
+suppressionConfirmation = Etes-vous s\u00FBr de vouloir supprimer le fichier joint
 aucunAttachment = Aucun fichier joint
 accueil = Accueil
 editionAttachment = Edition du fichier joint
 supprimerAttachment = Supprimer le fichier joint
 impression = Impression
 taille = Taille
-téléchargement = Téléchargement
-téléchargementTerminé = Téléchargement réussi
-downloadInProgress = Téléchargement en cours...
+t\u00E9l\u00E9chargement = T\u00E9l\u00E9chargement
+t\u00E9l\u00E9chargementTermin\u00E9 = T\u00E9l\u00E9chargement r\u00E9ussi
+downloadInProgress = T\u00E9l\u00E9chargement en cours...
 select = Select
-fichierJoint = Fichier à joindre
-liaisonTerminée = liaison réussie
-nomVide = Le nom du fichier doit être renseigné.
+fichierJoint = Fichier \u00E0 joindre
+liaisonTermin\u00E9e = liaison r\u00E9ussie
+nomVide = Le nom du fichier doit \u00EAtre renseign\u00E9.
 fichierInexistant = Le fichier n'existe pas !
 champsTropLong = Champs description trop long
-téléchargementDate = Téléchargé le
+t\u00E9l\u00E9chargementDate = T\u00E9l\u00E9charg\u00E9 le
 Title = Titre
 Description = Description
-Operations = Opérations
-Up = Déplacer vers le haut
-Down = Déplacer vers le bas
-checkOut = Réserver
-checkIn = Libérer
-readOnly = Réservé par
+Operations = Op\u00E9rations
+Up = D\u00E9placer vers le haut
+Down = D\u00E9placer vers le bas
+checkOut = R\u00E9server
+checkIn = Lib\u00E9rer
+readOnly = R\u00E9serv\u00E9 par
 at = le
 until = jusqu'au
 fichierTropGrand = Fichier trop volumineux
@@ -55,25 +55,26 @@ confirm.checkin.message=Voulez vous enregistrer vos modifications ?
 
 CopyLink = Pour copier le lien vers ce fichier : Clique droit puis 'Copier le raccourci'
 
-attachment.SameFileNameAlreadyCheckout = Vous avez déjà réservé un fichier portant le même nom !<br>Afin d'éviter d'écraser d'éventuelles modifications, vous ne pouvez pas réserver simultanément deux fichiers ayant le même nom.
-attachment.uploadFailed = L'envoi semble avoir échoué
+attachment.SameFileNameAlreadyCheckout = Vous avez d\u00E9j\u00E0 r\u00E9serv\u00E9 un fichier portant le m\u00EAme nom !<br>Afin d'\u00E9viter d'\u00E9craser d'\u00E9ventuelles modifications, vous ne pouvez pas r\u00E9server simultan\u00E9ment deux fichiers ayant le m\u00EAme nom.
+attachment.uploadFailed = L'envoi semble avoir \u00E9chou\u00E9
 
-attachment.notifSubjectLib = Fichier réservé : libéré
-attachment.notifSubjectExpiry = Fichier réservé : échéance demain
-attachment.notifSubjectAlert = Fichier réservé : arrive bientôt à échéance
-attachment.notifName = Le fichier réservé
-attachment.notifUserExpiry = arrive à échéance de réservation demain
-attachment.notifUserAlert = arrivera bientôt à échéance de réservation
-attachment.notifUserLib = est arrivé à échéance et a été libéré
+attachment.notifSubjectLib = Fichier r\u00E9serv\u00E9 : lib\u00E9r\u00E9
+attachment.notifSubjectExpiry = Fichier r\u00E9serv\u00E9 : \u00E9ch\u00E9ance demain
+attachment.notifSubjectAlert = Fichier r\u00E9serv\u00E9 : arrive bient\u00F4t \u00E0 \u00E9ch\u00E9ance
+attachment.notifName = Le fichier r\u00E9serv\u00E9
+attachment.notifUserExpiry = arrive \u00E0 \u00E9ch\u00E9ance de r\u00E9servation demain
+attachment.notifUserAlert = arrivera bient\u00F4t \u00E0 \u00E9ch\u00E9ance de r\u00E9servation
+attachment.notifUserLib = est arriv\u00E9 \u00E0 \u00E9ch\u00E9ance et a \u00E9t\u00E9 lib\u00E9r\u00E9
 
 //------------------------------------------------------------------------------------//
-//                  A mettre à jour dans le multilang general                         //
+//                  A mettre \u00E0 jour dans le multilang general                         //
 //------------------------------------------------------------------------------------//
 
 modifier = Modifier
 supprimer = Supprimer
 imprimer = Imprimer
 fermer = Fermer
+force = Forcer
 description = Description
 valider = Valider
 annuler = Annuler
@@ -82,7 +83,7 @@ type = Type
 fichier = Fichier
 ajouter = Ajouter
 webLoader = WebLoader
-preview = Prévisualisation
+preview = Pr\u00E9visualisation
 zip = Zipper
 
 erreur = Erreur
@@ -90,12 +91,12 @@ erreur = Erreur
 lier = Lier
 attachment.share = Partager ce fichier
 
-attachment.warning.checkin.locked=Le fichier est encore ouvert en mode d'édition en ligne.<br/>Veuillez le fermer avant de pouvoir le libérer.
+attachment.warning.checkin.locked=Le fichier est encore ouvert en mode d'\u00E9dition en ligne.<br/>Veuillez le fermer avant de pouvoir le lib\u00E9rer.
 
-attachment.xmlForm.Edit = Editer les informations complémentaires
+attachment.xmlForm.Edit = Editer les informations compl\u00E9mentaires
 attachment.xmlForm.View = Plus...
-attachment.xmlForm.ToolTip = Informations complémentaires sur 
+attachment.xmlForm.ToolTip = Informations compl\u00E9mentaires sur 
 attachment.share = Partager ce fichier
 
-attachment.checkOutAndDownload = Réserver et télécharger
+attachment.checkOutAndDownload = R\u00E9server et t\u00E9l\u00E9charger
 attachment.checkOutAndEditOnline = Editer en ligne
