Adding wiki role mapping (inheritance from space to component)
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1120 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/admin/roleMapping.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/admin/roleMapping.properties
@@ -172,6 +172,11 @@ webSites_publisher = Publisher
 webSites_writer = Publisher
 webSites_reader = Reader
 
+wiki_admin = admin
+wiki_publisher = writer
+wiki_writer = writer
+wiki_reader = user
+
 whitePages_admin = admin
 whitePages_publisher = admin
 whitePages_writer = admin
