fixing implementation statistics classes for old components
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1128 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/silverstatistics/SilverStatistics.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/silverstatistics/SilverStatistics.properties
@@ -106,7 +106,7 @@ demandeConges = com.stratelia.webactiv.demandeConges.DemandeConges
 
 // standard component class name for volume feed
 almanach = com.stratelia.webactiv.almanach.AlmanachStatistics
-bookmark = com.stratelia.webactiv.bookmark.BookmarkStatistics
+bookmark = com.stratelia.webactiv.webSites.WebSitesStatistics
 chat = com.stratelia.silverpeas.chat.ChatStatistics
 formManager = com.stratelia.webactiv.formManager.FormManagerStatistics
 forums = com.stratelia.webactiv.forums.ForumsStatistics
@@ -115,13 +115,13 @@ infoLetter = com.stratelia.silverpeas.infoLetter.InfoLetterStatistics
 kmax =com.stratelia.webactiv.kmax.KmaxStatistics
 kmelia =com.stratelia.webactiv.kmelia.KmeliaStatistics
 newsEdito = com.stratelia.webactiv.newsEdito.NewsEditoStatistics
-pollingStation = com.stratelia.webactiv.pollingStation.PollingStationStatistics
+pollingStation = com.stratelia.webactiv.survey.SurveyStatistics
 processManager = com.silverpeas.processManager.ProcessManagerStatistics
 quickinfo = com.stratelia.webactiv.quickinfo.QuickinfoStatistics
 quizz = com.stratelia.webactiv.quizz.QuizzStatistics
 survey = com.stratelia.webactiv.survey.SurveyStatistics
 taskm = com.stratelia.webactiv.taskm.TaskmStatistics
-toolbox = com.stratelia.webactiv.toolbox.ToolboxStatistics
+toolbox = com.stratelia.webactiv.kmelia.KmeliaStatistics
 webSites = com.stratelia.webactiv.webSites.WebSitesStatistics
 yellowpages = com.stratelia.webactiv.yellowpages.YellowpagesStatistics
 blog = com.silverpeas.blog.BlogStatistics
