Adding German language in user preferences
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1131 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/settings/personalizationPeasSettings.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/settings/personalizationPeasSettings.properties
@@ -24,7 +24,7 @@
 //Default language
 //Possible values : 'fr', 'en' 
 DefaultLanguage = fr
-languages = fr,en
+languages = fr,en,de
 
 //Informations updatable
 updateFirstName = true
