--- a/ejb-core/questioncontainer/pom.xml
+++ b/ejb-core/questioncontainer/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.silverpeas.core</groupId>
     <artifactId>ejb-core</artifactId>
-    <version>5.0-SNAPSHOT</version>
+    <version>5.0</version>
   </parent>
   
   <groupId>com.silverpeas.core.ejb-core</groupId>
