--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,9 @@
   </parent>
 
   <scm>
-    <connection>scm:svn:https://repository.silverpeas.org/svn/silverpeas/core/trunk</connection>
-    <developerConnection>scm:svn:https://repository.silverpeas.org/svn/silverpeas/core/trunk</developerConnection>
-    <url>https://repository.silverpeas.org/redmine/repositories/show/silverpeas-core</url>
+    <connection>scm:svn:https://repository.silverpeas.org/svn/silverpeas/core/tags/core-5.0</connection>
+    <developerConnection>scm:svn:https://repository.silverpeas.org/svn/silverpeas/core/tags/core-5.0</developerConnection>
+    <url>https://repository.silverpeas.org/redmine/repositories/show/silverpeas-core/tags/core-5.0</url>
   </scm>
 
   <repositories>
@@ -30,7 +30,7 @@
   
   <groupId>com.silverpeas</groupId>
   <artifactId>core</artifactId>
-  <version>5.0-SNAPSHOT</version>
+  <version>5.0</version>
   <packaging>pom</packaging>
   <name>Silverpeas Core</name>
 
