[maven-release-plugin] prepare for next development iteration
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1136 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/ejb-core/admin/pom.xml
+++ b/ejb-core/admin/pom.xml
@@ -4,12 +4,12 @@
   <parent>
     <groupId>com.silverpeas.core</groupId>
     <artifactId>ejb-core</artifactId>
-    <version>5.0</version>
+    <version>5.1-SNAPSHOT</version>
   </parent>
 	
   <groupId>com.silverpeas.core.ejb-core</groupId>
   <artifactId>admin</artifactId>
-  <version>5.0</version>
+  <version>5.1-SNAPSHOT</version>
   <packaging>ejb</packaging>
   <name>EJB Admin</name>
 </project>
