Updating the uid for OpenDS groups
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1171 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/domains/domainOpenDS.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/domains/domainOpenDS.properties
@@ -72,7 +72,7 @@ users.EmailField=mail
 
 # Groups' settings
 # ----------------
-#Depend de l'implémentation
+#Depend de l'impl\u00E9mentation
 groups.ClassName=groupOfUniqueNames
 # Note : the filter MUST be put between parentheses.
 #        there MUSTN'T have dummy parentheses levels ex : (&((Condition1))(Condition2)) will NOT works, (&(Condition1)(Condition2)) will works
@@ -80,7 +80,8 @@ groups.ClassName=groupOfUniqueNames
 groups.Filter=(uniqueMember=*)
 # Set the id Field to the 'cn' insteed of the DN to allow groups to move in the LDAP database
 # Set to objectGUID to have a unique ID
-groups.IdField=uid
+groups.IdField=entryUUID
+
 
 # Use com.stratelia.silverpeas.domains.ldapdriver.LDAPGroupSubTree to access groups that are just node with users and sub-groups as sons
 # Use com.stratelia.silverpeas.domains.ldapdriver.LDAPGroupUniqueDescriptor to access groups that contains an attribute containing DN of all there sons
