--- a/web-core/pom.xml
+++ b/web-core/pom.xml
@@ -166,6 +166,11 @@
       <groupId>com.sun.jndi</groupId>
       <artifactId>providerutil</artifactId>
     </dependency>
+     <dependency>
+      <groupId>com.metaparadigm</groupId>
+      <artifactId>json-rpc</artifactId>
+      <scope>provided</scope>
+    </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>test-core</artifactId>
