fixes bug #231 - évolution banque de fichiers
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1210 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/wysiwyg/multilang/wysiwygBundle.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/wysiwyg/multilang/wysiwygBundle.properties
@@ -46,3 +46,7 @@ UploadTitle = Upload de fichier
 Valider = Valider
 Annuler = Annuler
 DynamicValues = sélectionner un mot-clé
+storageFile.select.title = Sélectionner une banque de fichier
+storageFile.home.title = Gestion des liens vers des pieces jointes
+storageFile.home.description = Veuillez utiliser le menu latéral gauche pour afficher les pièces jointes.
+storageFile.icon.alt=Insérer des pièces jointes
