--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle.properties
@@ -81,6 +81,8 @@ TestSMTPExplanation = Vous venez de tester l'envoi d'une notification dans une m
 MesNotifications = Mes notifications
 ParametrerNotification = Paramétrage
 LireNotification = Boîte de notification
+SendedUserNotifications = Notifications envoyées
+
 Notifier = Envoi d'une notification
 MessageSuppressionCanal = Etes-vous sûr de vouloir supprimer ce canal ?
 MessageSuppressionRegle = Etes-vous sûr de vouloir supprimer cette règle ?
