Fixing bug #325 : using a single spring context
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1222 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/WEB-INF/web.xml
+++ b/war-core/src/main/webapp/WEB-INF/web.xml
@@ -33,7 +33,7 @@ version="2.4" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.su
   <context-param>
     <!-- Init Parameters -->
     <param-name>contextConfigLocation</param-name>
-    <param-value>WEB-INF/config/spring*.xml</param-value>
+    <param-value>WEB-INF/config/spring-*.xml WEB-INF/config/jcr/spring-*.xml</param-value>
   </context-param>
   <context-param>
     <!-- Init Parameters -->
@@ -267,11 +267,6 @@ version="2.4" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.su
   <servlet>
     <servlet-name>JcrInitializer</servlet-name>
     <servlet-class>com.silverpeas.jcrutil.servlets.RepositoryAccessServlet</servlet-class>
-    <init-param>
-      <description>Spring JCR configuration file</description>
-      <param-name>configuration</param-name>
-      <param-value>/WEB-INF/config/jcr/spring-jcr.xml /WEB-INF/config/jcr/spring-jdbc-datasource.xml</param-value>
-    </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
   <servlet>
