--- a/web-core/pom.xml
+++ b/web-core/pom.xml
@@ -176,6 +176,11 @@
       <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>commons-lang</groupId>
+    	<artifactId>commons-lang</artifactId>
+    	<version>2.3</version>
+    </dependency>
   </dependencies>
   
   <build>
