Creation of PDC field closes feature #341
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1272 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/settings/pdcPeasIcons.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/settings/pdcPeasIcons.properties
@@ -93,3 +93,7 @@ pdcPeas.inProgress = /util/icons/inProgress.gif
 pdcPeas.user = /util/icons/user.gif
 pdcPeas.group = /util/icons/groupe.gif
 pdcPeas.groupSynchronized = /jobDomainPeas/jsp/icons/scheduledGroup.gif
+
+pdcPeas.addPosition = /pdcPeas/jsp/icons/add.gif
+pdcPeas.editPosition = /pdcPeas/jsp/icons/edit_button.gif
+pdcPeas.deletePosition = /pdcPeas/jsp/icons/delete.gif
