--- a/config-core/src/main/config/properties/com/silverpeas/form/settings/types.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/form/settings/types.properties
@@ -72,3 +72,8 @@ jdbcRef.implementation = com.silverpeas.form.fieldType.JdbcRefField
 jdbcRef.displayer = com.silverpeas.form.fieldDisplayer.JdbcRefFieldDisplayer
 jdbcRef.displayer.jdbc = com.silverpeas.form.fieldDisplayer.JdbcRefFieldDisplayer
 jdbcRef.displayer.simpletext = com.silverpeas.form.fieldDisplayer.TextDisplayer
+
+pdc.implementation = com.silverpeas.form.fieldType.PdcField
+pdc.displayer = com.silverpeas.form.fieldDisplayer.PdcFieldDisplayer
+pdc.displayer.pdc = com.silverpeas.form.fieldDisplayer.PdcFieldDisplayer
+pdc.displayer.simpletext = com.silverpeas.form.fieldDisplayer.PdcFieldDisplayer
