Related to feature #308, some tests failed on CI server...
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1279 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/lib-core/src/test/resources/com/stratelia/webactiv/beans/admin/admin.properties
+++ b/lib-core/src/test/resources/com/stratelia/webactiv/beans/admin/admin.properties
@@ -104,4 +104,4 @@ HaveToTestConnections = true
 FallbackUserLogins = false
 
 # To enable profile inheritance between spaces and components
-UseProfileInheritance = false
+UseProfileInheritance = true
