--- a/lib-core/pom.xml
+++ b/lib-core/pom.xml
@@ -189,7 +189,7 @@
       <artifactId>jericho-html</artifactId>
     </dependency>
     <dependency>
-      <groupId>pdfbox</groupId>
+      <groupId>org.apache.pdfbox</groupId>
       <artifactId>pdfbox</artifactId>
     </dependency>
     <dependency>
