Moving test lib into the scope test
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1308 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/lib-core/pom.xml
+++ b/lib-core/pom.xml
@@ -201,6 +201,7 @@
       <artifactId>mockrunner</artifactId>
       <version>0.4.1</version>
       <classifier>j2ee1.4-jdk6</classifier>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>net.fortuna.ical4j</groupId>
