Escaping with unicode chars
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1358 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/external/webConnections/multilang/webConnectionsBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/external/webConnections/multilang/webConnectionsBundle.properties
@@ -25,8 +25,8 @@ webConnections.addConnection = Enregistrer votre connexion
 webConnections.url = Url
 webConnections.login = Login
 webConnections.password = Mot de passe
-webConnections.confirmDeleteConnection = Etes-vous s\u00FBr(e) de vouloir supprimer cette connexion ?
-webConnections.updateConnection = Mettre \u00E0 jour votre connexion
+webConnections.confirmDeleteConnection = Etes-vous sûr(e) de vouloir supprimer cette connexion ?
+webConnections.updateConnection = Mettre à jour votre connexion
 webConnections.deleteConnection = Supprimer votre connexion
 webconnections.mandatory = Obligatoire
 webConnections.connections = Mes connexions
