--- a/config-core/src/main/config/properties/com/silverpeas/external/filesharing/multilang/fileSharingBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/external/filesharing/multilang/fileSharingBundle.properties
@@ -27,35 +27,35 @@ fileSharing.alt = Texte de la balise <alt>
 fileSharing.tickets = Mes tickets
 fileSharing.ticket = Ticket
 fileSharing.addTicket = Ajouter un ticket
-fileSharing.deleteTickets = Supprimer tous les tickets s\u00E9lectionn\u00E9s
+fileSharing.deleteTickets = Supprimer tous les tickets sélectionnés
 fileSharing.interneLink = Lien interne
-fileSharing.endDate = Date de fin de validit\u00E9
-fileSharing.nbAccess = Nombre d'acc\u00E8s
-fileSharing.nbAccessMax = Nombre d'acc\u00E8s maximun
-fileSharing.operation = Op\u00E9rations
-fileSharing.updateTicket = Mettre \u00E0 jour un ticket
-fileSharing.createTicket = Cr\u00E9er un ticket
+fileSharing.endDate = Date de fin de validité 
+fileSharing.nbAccess = Nombre d'accès
+fileSharing.nbAccessMax = Nombre d'accès maximun
+fileSharing.operation = Opérations
+fileSharing.updateTicket = Mettre à jour un ticket
+fileSharing.createTicket = Créer un ticket
 fileSharing.deleteTicket = Supprimer un ticket
 fileSharing.fileId = Id du fichier
 fileSharing.componentId = Id du composant
 fileSharing.versioning = Versioning
-fileSharing.creationDate = Cr\u00E9\u00E9 le
+fileSharing.creationDate = Créé le 
 fileSharing.by = par
-fileSharing.updateDate = modifi\u00E9 le
-fileSharing.endDate = Date de fin de validit\u00E9
-fileSharing.nbAccessMax = Nombre d'acc\u00E8s maximum
-fileSharing.nbAccess = Nombre d'acc\u00E8s
-fileSharing.keyFile = cl\u00E9
+fileSharing.updateDate = modifié le
+fileSharing.endDate = Date de fin de validité
+fileSharing.nbAccessMax = Nombre d'accès maximum
+fileSharing.nbAccess = Nombre d'accès 
+fileSharing.keyFile = clé
 fileSharing.confirmTicket = Votre ticket
-fileSharing.confirmDeleteTicket = Etes vous s\u00FBr de vouloir supprimer le ticket 
-fileSharing.downloadDate = t\u00E9l\u00E9charg\u00E9 le
+fileSharing.confirmDeleteTicket = Etes vous sûr de vouloir supprimer le ticket 
+fileSharing.downloadDate = téléchargé le 
 fileSharing.IP = IP
-fileSharing.url = url d'acc\u00E8s :
-fileSharing.expiredTicket = Le ticket demand\u00E9 a expir\u00E9
+fileSharing.url = url d'accès : 
+fileSharing.expiredTicket = Le ticket demandé a expiré
 fileSharing.nameFile = Nom du ficher 
 fileSharing.sizeFile = Taille
-fileSharing.downloadLink = lien de t\u00E9l\u00E9chargement
+fileSharing.downloadLink = lien de téléchargement
 fileSharing.ticketNotValid = Ce ticket n'est plus valide
 fileSharing.afficherCalendrier = afficher le calendrier
-fileSharing.maxValue = doit \u00EAtre compris entre 1 et 100
+fileSharing.maxValue = doit être compris entre 1 et 100
 
