closing feature #320 Add Facet search grouping feature.
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1395 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/settings/pdcPeasSettings.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/settings/pdcPeasSettings.properties
@@ -50,3 +50,6 @@ enableMarkAsRead= true
 enableWordSpelling= true
 
 wordSpellingMinScore=0.5f
+
+#facet search group filter blacklist
+searchengine.facet.component.blacklist=todo,agenda,TreeNode
