--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle.properties
@@ -252,3 +252,7 @@ pdcPeas.choiceForm = Vous devez choisir un formulaire
 pdcPeas.selectAll=Tout sélectionner
 
 pdcpeas.didYouMean= Essayez avec cette orthographe :
+
+# Facet group search message
+pdcPeas.group.tooltip.enable= Cliquer pour affiner la recherche sur "{0}".
+pdcPeas.group.tooltip.disable= Cliquer pour supprimer l\'affinage sur "{0}".
