Feature #320 Improve search filter graphical user interface.
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1400 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/settings/pdcPeasSettings.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/settings/pdcPeasSettings.properties
@@ -52,4 +52,5 @@ enableWordSpelling= true
 wordSpellingMinScore=0.5f
 
 #facet search group filter blacklist
-searchengine.facet.component.blacklist=todo,agenda,TreeNode
+searchengine.facet.component.blacklist = todo,agenda,TreeNode
+searchengine.facet.max.length = 20
