--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/settings/pdcPeasSettings.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/settings/pdcPeasSettings.properties
@@ -51,6 +51,6 @@ enableWordSpelling= true
 
 wordSpellingMinScore=0.5f
 
-#facet search group filter blacklist
-searchengine.facet.component.blacklist = todo,agenda,TreeNode
+#facet search group filter blacklist (ex : todo,agenda,TreeNode)
+searchengine.facet.component.blacklist = 
 searchengine.facet.max.length = 20
