--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
@@ -142,6 +142,7 @@ GML.publish						= Publier
 
 GML.restore						= Restaurer
 
+GML.saveDraft					= Sauvegarder
 GML.search						= Rechercher
 GML.size						= Taille
 GML.space						= Espace
