Updating parent pom version
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1617 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.silverpeas</groupId>
     <artifactId>parent</artifactId>
-    <version>11</version>
+    <version>12-SNAPSHOT</version>
   </parent>
 
   <scm>
