--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/SilverpeasV5.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/SilverpeasV5.properties
@@ -59,7 +59,7 @@ lastResultsIcon =
 okIcon = 
 FondManager = /silverpeas/jobManagerPeas/jsp/icons/fondmanager.gif
 
-# Visibilité icônes TopBar ("false" pour masquer)
+# Visibilit\u00e9 ic\u00f4nes TopBar ("false" pour masquer)
 mailVisible = 
 mapVisible =
 logVisible =
@@ -68,7 +68,7 @@ helpVisible =
 clipboardVisible = 
 glossaryVisible = 
 
-# Visibilité composants Espace personnel ("false" pour masquer)
+# Visibilit\u00e9 composants Espace personnel ("false" pour masquer)
 personnalSpaceVisible =  
 agendaVisible = 
 todoVisible = 
@@ -79,7 +79,7 @@ fileSharingVisible = true
 webconnectionsVisible = true
 
 # URL aide en ligne
-helpURL = /help_fr/Silverpeas.htm
+helpURL = /help_fr/index.html
 
 # Domain's Bar frameset
 domainsBarFramesetWidth = 255
@@ -91,11 +91,11 @@ spaceMaxChar = 25
 defaultHomepage = 
 persoHomepage = 
 
-# Id du user utilisé pour l'authentification anonyme
+# Id du user utilis\u00e9 pour l'authentification anonyme
 guestId	= 403
 
-# Ids des composants affichés dans la Topbar
-# les ids doivent être séparés par des virgules. 
+# Ids des composants affich\u00e9s dans la Topbar
+# les ids doivent \u00eatre s\u00e9par\u00e9s par des virgules. 
 # componentsTop = kmelia17,toolbox196,kmelia24,quickinfo101
 componentsTop = toolbox558,webPages690,questionReply364
 
