closing feature #329. Creating new XML field : group.
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1647 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle.properties
@@ -28,6 +28,9 @@ Characters = caractères
 userPanel = Sélectionner un utilisateur
 clearUser = Réinitialiser le champ
 
+groupPanel = Sélectionner un groupe
+clearGroup = Réinitialiser le champ
+
 removeFile = Supprimer le fichier
 removeImage = Supprimer l'image
 
