--- a/config-core/src/main/config/properties/com/silverpeas/form/settings/types.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/form/settings/types.properties
@@ -77,3 +77,8 @@ pdc.implementation = com.silverpeas.form.fieldType.PdcField
 pdc.displayer = com.silverpeas.form.fieldDisplayer.PdcFieldDisplayer
 pdc.displayer.pdc = com.silverpeas.form.fieldDisplayer.PdcFieldDisplayer
 pdc.displayer.simpletext = com.silverpeas.form.fieldDisplayer.PdcFieldDisplayer
+
+group.implementation = com.silverpeas.form.fieldType.GroupField
+group.displayer = com.silverpeas.form.fieldDisplayer.GroupFieldDisplayer
+group.displayer.group = com.silverpeas.form.fieldDisplayer.GroupFieldDisplayer
+group.displayer.simpletext = com.silverpeas.form.fieldDisplayer.TextDisplayer
