--- a/config-core/src/main/config/properties/com/silverpeas/jobDomainPeas/settings/jobDomainPeasSettings.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobDomainPeas/settings/jobDomainPeasSettings.properties
@@ -30,3 +30,5 @@ BlanksAllowedInPwd = false
 
 UserAddingAllowedForGroupManagers = false
 UseCommunityManagement = false
+
+templatePath=${SILVERPEAS_DATA_HOME}/resources/StringTemplates/ (défini dans SilverpeasSettings.xml)
