--- a/lib-core/pom.xml
+++ b/lib-core/pom.xml
@@ -215,6 +215,10 @@
       <groupId>com.ibm.icu</groupId>
       <artifactId>icu4j</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.antlr</groupId>
+      <artifactId>stringtemplate</artifactId>    
+    </dependency>    
   </dependencies>
 
   <build>
