--- a/test-core/pom.xml
+++ b/test-core/pom.xml
@@ -73,6 +73,11 @@
       <classifier>j2ee1.4-jdk6</classifier>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
   <build>
