--- a/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle.properties
@@ -36,6 +36,8 @@ removeImage = Supprimer l'image
 
 SelectValue = Sélectionner une valeur
 
+SelectPicture = Sélectionner une image
+
 // filtres
 eq =
 le = (avant le)
