Preparing extraction of integration tests
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1752 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/ejb-core/versioning/pom.xml
+++ b/ejb-core/versioning/pom.xml
@@ -38,7 +38,7 @@
     </dependency>
     <dependency>
       <groupId>${project.parent.groupId}</groupId>
-      <artifactId>test-core</artifactId>
+      <artifactId>it-test-core</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
