--- a/pom.xml
+++ b/pom.xml
@@ -86,8 +86,9 @@
   </build>
 
   <modules>
-    <module>lib-core</module>
     <module>test-core</module>
+    <module>lib-core</module>
+    <module>it-test-core</module>
     <module>ejb-core</module>
     <module>web-core</module>
     <module>war-core</module>
