--- a/war-core/pom.xml
+++ b/war-core/pom.xml
@@ -131,6 +131,16 @@
       <artifactId>json-rpc</artifactId>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <artifactId>java-portlet-container</artifactId>
+      <groupId>com.sun.portal.portletcontainer</groupId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <artifactId>portlet-api</artifactId>
+      <groupId>javax.portlet</groupId>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
   
   <build>
