Removing duplicate jars in ear/lib and WEB-INF/lib
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1929 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/pom.xml
+++ b/war-core/pom.xml
@@ -141,6 +141,11 @@
       <groupId>javax.portlet</groupId>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <artifactId>container</artifactId>
+      <groupId>com.sun.portal.portletcontainer</groupId>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
   
   <build>
