update feature #562 Merge of specific branche into silverpeas trunk
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1943 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle.properties
@@ -254,5 +254,9 @@ pdcPeas.selectAll=Tout sélectionner
 pdcpeas.didYouMean= Essayez avec cette orthographe :
 
 # Facet group search message
+pdcPeas.group.author= Auteur
+pdcPeas.group.service= Service
 pdcPeas.group.tooltip.enable= Cliquer pour affiner la recherche sur {0}.
 pdcPeas.group.tooltip.disable= Cliquer pour supprimer le filtre sur {0}.
+
+pdcPeas.popularity = * views
