Displaying social network and user's directory
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1991 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/pom.xml
+++ b/war-core/pom.xml
@@ -147,8 +147,24 @@
       <scope>provided</scope>
     </dependency>
   </dependencies>
-  
+
   <build>
     <finalName>war-core</finalName>
+    <testResources>
+      <testResource>
+	<directory>${basedir}/src/test/resources</directory>
+	<excludes>
+	  <exclude>*.jpg</exclude>
+	</excludes>
+	<filtering>true</filtering>
+      </testResource>
+      <testResource>
+	<directory>${basedir}/src/test/resources</directory>
+	<includes>
+	  <include>*.jpg</include>
+	</includes>
+	<filtering>false</filtering>
+      </testResource>
+    </testResources>
   </build>
 </project>
