Fixing bug #778 and Support #418 : the applet has now an ATL attribute and the max file size is in byte
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2028 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/util/multilang/util.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/util/multilang/util.properties
@@ -26,11 +26,8 @@ ko = Ko
 mo = Mo
 util.ligne = - Ligne
 util.colonne = Colonne
-util.errorType = Type erroné : 
+util.errorType = Type erron\u00E9 :
 util.valeur = Valeur
 util.type = Type attendu
 util.colonnesAttendues = colonnes sur
 util.attendues = attendues
-
-
-
