Adding dependency for tests
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2051 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/pom.xml
+++ b/war-core/pom.xml
@@ -146,6 +146,12 @@
       <groupId>com.sun.portal.portletcontainer</groupId>
       <scope>provided</scope>
     </dependency>
+     <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>test-core</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>  
   </dependencies>
 
   <build>
