closing feature #846. On XML field "image", adding capabilities to select an image from galleries. Updating template designer to manage new parameter on "image" field...
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2052 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
@@ -275,4 +275,6 @@ GML.DragNDropCollapse = Fermer
 GML.personalSpace = Espace personnel
 GML.linkTo = R\u00E9f\u00E9rencer
 
-GML.applet.dnd.alt=Applet pour le glisser/d\u00E9poser de fichiers.
+GML.or = ou
+GML.galleries = Phototh\u00E8ques
+GML.applet.dnd.alt=Applet pour le glisser/d\u00E9poser de fichiers
