fixing bug #730 [Tools] Supervision fichiers
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2058 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/web-core/pom.xml
+++ b/web-core/pom.xml
@@ -70,6 +70,10 @@
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
     </dependency>
+	<dependency>
+      <groupId>commons-beanutils</groupId>
+      <artifactId>commons-beanutils</artifactId>
+    </dependency>
     <dependency>
       <groupId>com.silverpeas.core</groupId>
       <artifactId>lib-core</artifactId>
