closing support #901. Creating new jquery widget to display homogeneous in-progress message. Updating files which using former in-progress message.
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2087 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/multilang/graphicElementFactoryBundle.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/multilang/graphicElementFactoryBundle.properties
@@ -30,3 +30,6 @@ GEF.pagination.lastPage = Dernière page
 GEF.pagination.gotoPage = Aller à la page 
 GEF.pagination.jumptoPage = Aller directement à la page...
 GEF.pagination.jumper = Page...
+
+GEF.progressMessage.message1 = Traitement en cours
+GEF.progressMessage.message2 = Merci de bien vouloir patienter...
